<resources>
    <string name="app_name">HelianApp</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="calibration_settings">Calibration</string>
    <string name="info_settings">Info</string>>


    <string name="basic_information">ООО "МРС-Р"\n
         автор Щитников Александр\n
         версия тестовая\n
         серийный номер 001\n
         версия прошивки 01_01\n
    </string>>
    <string name="info_dialog_title">Info</string>>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_logo">Main Logo</string>
    <string name="quickSearch"> Quick Search</string>
    <string name="IDsearch">ID search</string>
    <string name="ok">OK</string>

    <string name="HelianTransponderName">TRANSPONDER</string>

    <!--    BLE strings-->
    <string name="screen_title_main">Device List</string>
    <string name="send_msg">Send msg</string>
    <string name="connect">Connect</string>
    <string name="connect_ble">Connect BLE</string>
    <string name="unknown_device">unknown device</string>
</resources>
