<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.mineradio.helianapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/bluetooth_settings"
        android:orderInCategory="100"
        android:title="@string/bluetooth_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/calibration_settings"
        android:orderInCategory="100"
        android:title="@string/calibration_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/info_settings"
        android:orderInCategory="100"
        android:title="@string/info_settings"
        app:showAsAction="never" />
</menu>
